removed unnecessary utility classes and added styling to main css

--- a/index.html
+++ b/index.html
@@ -9,91 +9,86 @@
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-    <title>Digital Fronteer | Brian Cautaerts</title>
+    <title>Fronteer | Digital Marketing & Development | Brian Cautaerts</title>
 </head>
 
 <body>
-    <div class="fixed w-full">
+    <div class="fixed m-0 w-full">
         <a class="bg-white block py-4 text-center" href="index.html">
-            <img class="inline-block w-12" src="images/1IMDB_Brian_Cautaerts_logo.svg" alt="digital fronteer">
+            <img class="inline-block m-0 w-12" src="images/1IMDB_Brian_Cautaerts_logo.svg" alt="digital fronteer">
         </a>
     </div>
     <header>
-        <nav class="fixed w-full bottom-0 grid grid-cols-4 gap-6 px-6 pt-3 pb-6 text-center bg-white box-shadow-nav">
+        <nav class="fixed w-full bottom-0 grid grid-cols-4 gap-6 pt-3 pb-6 text-center bg-white box-shadow-nav">
             <a class="nav-icon-marketing text-xxs pt-7" href="#">Marketing</a>
             <a class="nav-icon-code text-xxs pt-7" href="#">Coderen</a>
             <a class="nav-icon-project text-xxs pt-7" href="#">Projecten</a>
             <a class="nav-icon-contact text-xxs pt-7" href="#">Contact</a>
         </nav>
 
-        <div class="px-6 pb-4">
-            <h1 class="pb-4 text-3xl header-title">Aan jouw front voer ik de digitale strijd, op het gebied van online <b class="text-black">marketing</b> & <b class="text-black">development</b></h1>
-            <div class="text-center pb-4">
-                <p class="text-center pb-4">Ontdek meer</p>
+        <div>
+            <h1 class="header-title">Aan jouw front voer ik de digitale strijd, op het gebied van online <b class="text-black">marketing</b> & <b class="text-black">development</b></h1>
+            <div class="text-center">
+                <p class="text-center">Ontdek meer</p>
                 <a class="arrow-down inline-block" href="#intro"></a>
             </div>
-            <div id="intro">
-                <h2 class="text-2xl font-bold pb-4">Fronteer</h2>
-                <p class="pb-4">Hallo ik ben Brian Cautaerts, een <b>fronteer</b>. Nog nooit van dit woord gehoord? Dat is niet zo vreemd hoor! Het is een mix tussen front-end developer (website bouwer) en een marketeer, de twee zaken die ik het liefst doe. De <b>digitale marketingwereld</b>                    is waar ik mij graag bevind en <b>front-end development</b> is wat ik graag doe. Mijn verhaal als fronteer? Dat lees je hier…</p>
-                <p class="pb-4">Een fronteer nodig?</p>
-                <div class="text-center">
-                    <a class="mb-4 btn" href="contact.html">Contacteer mij</a>
-                </div>
+            <div class="px-0 text-center" id="intro">
+                <h2>Fronteer</h2>
+                <p>Hallo ik ben Brian Cautaerts, een <b>fronteer</b>. Nog nooit van dit woord gehoord? Het is een mix tussen front-end developer (website bouwer) en een marketeer, de twee zaken die ik het liefst doe. <b>digitale marketingwereld</b> is waar
+                    ik mij graag bevind en <b>front-end development</b> is wat ik graag doe. Mijn verhaal als fronteer? Dat lees je hier…</p>
+                <p>Een fronteer nodig?</p>
+                <a class="btn" href="contact.html">Contacteer mij</a>
             </div>
         </div>
     </header>
 
-    <div class="px-6 pb-4">
-        <div class="p-6 mb-4 shadow-md border-radius-2 bg-white text-center">
-            <img class="pb-4 inline-block w-12" src="images/marketing_icon_selected.svg" alt="digital marketing">
-            <h2 class="pb-4 text-2xl font-bold text-center">Digital marketing</h2>
-            <p class="pb-4">In een steeds veranderende online wereld probeer ik zo goed mogelijk mee te zijn met de laatste <b>digital marketing trends</b>. Lees hier mijn ervaring als frisse digital native.
+    <div>
+        <div class="p-4 shadow-md border-radius-2 bg-white text-center">
+            <img class="inline-block w-12" src="images/marketing_icon_selected.svg" alt="digital marketing">
+            <h2 class="text-2xl font-bold text-center">Digital marketing</h2>
+            <p>In een steeds veranderende online wereld probeer ik zo goed mogelijk mee te zijn met de laatste <b>digital marketing trends</b>. Lees hier mijn ervaring als frisse digital native.
 
             </p>
-            <div class="text-center">
-                <a class="btn" href="#">Digital marketing</a>
-            </div>
+            <a class="btn" href="#">Digital marketing</a>
         </div>
 
-        <div class="p-6 mb-4 shadow-md border-radius-2 bg-white text-center">
-            <img class="pb-4 inline-block w-12" src="images/coding_icon_selected.svg" alt="front-end development">
-            <h2 class="pb-4 text-2xl font-bold text-center">Front-end development</h2>
-            <p class="pb-4">Nadenken over de juiste creatieve maar ook strategische keuzes. Dit zorgt ervoor dat de <b>UI (user interface)</b> en <b>UX (user experience)</b> van een webapplicatie zo <b>gebruikersvriendelijk</b> mogelijk zijn. En dat doe ik maar al te
+        <div class="p-4 shadow-md border-radius-2 bg-white text-center">
+            <img class="inline-block w-12" src="images/coding_icon_selected.svg" alt="front-end development">
+            <h2 class="text-2xl font-bold text-center">Front-end development</h2>
+            <p>Nadenken over de juiste creatieve maar ook strategische keuzes. Dit zorgt ervoor dat de <b>UI (user interface)</b> en <b>UX (user experience)</b> van een webapplicatie zo <b>gebruikersvriendelijk</b> mogelijk zijn. En dat doe ik maar al te
                 graag!
             </p>
-            <div class="text-center">
-                <a class="btn" href="#">Development</a>
-            </div>
+            <a class="btn" href="#">Development</a>
         </div>
 
-        <div class="p-6 mb-4 shadow-md border-radius-2 bg-white text-center">
-            <img class="pb-4 inline-block w-12" src="images/case_icon_selected.svg" alt="cases">
-            <h2 class="pb-4 text-2xl font-bold text-center">Cases</h2>
-            <p class="pb-4">Tijdens mijn carrière als student IMD (Interactive Multimedia Design) heb ik al een aantal <b>projecten</b> op poten gezet. Zoals bijvoorbeeld deze website. Wil je weten welke projecten ik nog heb gerealiseerd? Bekijk het hier!
+        <div class="p-4 shadow-md border-radius-2 bg-white text-center">
+            <img class="inline-block w-12" src="images/case_icon_selected.svg" alt="cases">
+            <h2 class="text-2xl font-bold text-center">Cases</h2>
+            <p>Tijdens mijn carrière als student IMD (Interactive Multimedia Design) heb ik al een aantal <b>projecten</b> op poten gezet. Zoals bijvoorbeeld deze website. Wil je weten welke projecten ik nog heb gerealiseerd? Bekijk het hier!
             </p>
-            <div class="text-center">
-                <a class="btn" href="#">Bekijk cases</a>
-            </div>
+            <a class="btn" href="#">Bekijk cases</a>
         </div>
     </div>
 
-    <footer class="p-6 text-center">
-        <a class="block pb-4 text-center" href="index.html">
-            <img class="inline-block w-12" src="images/1IMDB_Brian_Cautaerts_logo_white.svg" alt="Digital fronteer logo">
-        </a>
-        <a class="block pb-4 text-white" href="frontend.html">Front end</a>
-        <a class="block pb-4 text-white" href="marketing.html">Marketing</a>
-        <a class="block pb-4 text-white" href="case.html">Projecten</a>
-        <a class="block pb-4 text-white" href="contact.html">Contact</a>
-        <div class="p-4 grid grid-cols-3 gap-6 text-center">
-            <a class="" href="https://www.facebook.com/Brian.Cautaerts">
-                <img class="inline-block w-8" src="images/fb_icon.svg" alt="facebook icon">
+    <footer class="text-center">
+        <div class="grid grid-cols-1 gap-4">
+            <a class="block text-center" href="index.html">
+                <img class="inline-block w-12 m-0" src="images/1IMDB_Brian_Cautaerts_logo_white.svg" alt="Digital fronteer logo">
             </a>
-            <a class="smRef" href="https://www.linkedin.com/in/brian-cautaerts-282b3614b/">
-                <img class="inline-block w-8" src="images/li_icon.svg" alt="linkedin icon">
+            <a class="block text-white" href="marketing.html">Marketing</a>
+            <a class="block text-white" href="frontend.html">Development</a>
+            <a class="block text-white" href="case.html">Projecten</a>
+            <a class="block text-white" href="contact.html">Contact</a>
+        </div>
+        <div class="pt-4 m-0 grid grid-cols-3 gap-6 text-center">
+            <a href="https://www.facebook.com/Brian.Cautaerts">
+                <img class="inline-block m-0 w-8" src="images/fb_icon.svg" alt="facebook icon">
             </a>
-            <a class="smRef" href="https://www.instagram.com/briancautaerts/">
-                <img class="inline-block w-8" src="images/ig_icon.svg" alt="instagram icon">
+            <a href="https://www.linkedin.com/in/brian-cautaerts-282b3614b/">
+                <img class="inline-block m-0 w-8" src="images/li_icon.svg" alt="linkedin icon">
+            </a>
+            <a href="https://www.instagram.com/briancautaerts/">
+                <img class="inline-block m-0 w-8" src="images/ig_icon.svg" alt="instagram icon">
             </a>
         </div>
     </footer>
