split up content blocks

--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
             </div>
             <div class="px-0 text-center" id="intro">
                 <h2>Fronteer</h2>
-                <p>Hallo ik ben Brian Cautaerts, een <b>fronteer</b>. Nog nooit van dit woord gehoord? Het is een mix tussen front-end developer (website bouwer) en een marketeer, de twee zaken die ik het liefst doe. <b>digitale marketingwereld</b> is waar
-                    ik mij graag bevind en <b>front-end development</b> is wat ik graag doe. Mijn verhaal als fronteer? Dat lees je hier…</p>
+                <p>Hallo ik ben Brian Cautaerts, een <b>fronteer</b>. Nog nooit van dit woord gehoord? Het is een mix tussen front-end developer (website bouwer) en een marketeer, de twee zaken die ik het liefst doe.</p>
+                <p>De <b>digitale marketingwereld</b> is waar ik mij graag bevind en <b>front-end development</b> is wat ik graag doe. Mijn verhaal als fronteer? Dat lees je hier…</p>
+                </p>
                 <p>Een fronteer nodig?</p>
                 <a class="btn" href="contact.html">Contacteer mij</a>
             </div>
